refactor(GET: api/jobs/get-jobs-employer) : add search, fillter to reponse data with panigation