@@ -11,6 +11,7 @@ import com.webit.webit.exception.ErrorCode;
 import com.webit.webit.model.Application;
 import com.webit.webit.model.Job;
 import com.webit.webit.model.SavedJob;
+import com.webit.webit.model.User;
 import com.webit.webit.repository.ApplicationRepository;
 import com.webit.webit.repository.JobRepository;
 import com.webit.webit.repository.SavedJobRepository;
@@ -239,7 +240,7 @@ public class JobServiceImpl implements JobService {
     }
 
     @Override
-    public PageResponse<?> getJobsEmployer(int pageNo, int pageSize) {
+    public PageResponse<?> getJobsEmployer(int pageNo, int pageSize, String search, String status, String sortField, String sortDirection) {
         var authentication = SecurityContextHolder.getContext().getAuthentication();
 
         if (authentication == null || !(authentication.getPrincipal() instanceof Jwt jwt)) {
@@ -248,38 +249,108 @@ public class JobServiceImpl implements JobService {
 
         String userId = jwt.getSubject();
 
-        Pageable pageable =  PageRequest.of(pageNo, pageSize);
+        // Validate và map sortField
+        String validSortField = "location".equalsIgnoreCase(sortField) ? "location" : "title";
+        
+        // Build sort direction
+        org.springframework.data.domain.Sort.Direction direction = "desc".equalsIgnoreCase(sortDirection)
+                ? org.springframework.data.domain.Sort.Direction.DESC
+                : org.springframework.data.domain.Sort.Direction.ASC;
 
+        // Create Pageable with sorting - lấy tất cả jobs trước để filter
+        // Tạm thời không sort ở đây, sẽ sort sau khi filter
+        Pageable pageable = PageRequest.of(0, Integer.MAX_VALUE);
+        
         Page<Job> page = jobRepository.findAllByCompany_UserId(userId, pageable);
+        
+        // Filter by search keyword (title hoặc location)
+        List<Job> filteredJobs = page.getContent();
+        if (search != null && !search.trim().isEmpty()) {
+            String searchLower = search.toLowerCase().trim();
+            filteredJobs = filteredJobs.stream()
+                    .filter(job -> {
+                        String title = job.getTitle() != null ? job.getTitle().toLowerCase() : "";
+                        String location = job.getLocation() != null ? job.getLocation().toLowerCase() : "";
+                        return title.contains(searchLower) || location.contains(searchLower);
+                    })
+                    .collect(Collectors.toList());
+        }
 
-        List<String> jobIds = page.getContent().stream()
+        // Filter by status
+        if (status != null && !status.equalsIgnoreCase("All")) {
+            if ("Active".equalsIgnoreCase(status)) {
+                filteredJobs = filteredJobs.stream()
+                        .filter(job -> !job.isClosed())
+                        .collect(Collectors.toList());
+            } else if ("Closed".equalsIgnoreCase(status)) {
+                filteredJobs = filteredJobs.stream()
+                        .filter(job -> job.isClosed())
+                        .collect(Collectors.toList());
+            }
+        }
+
+        // Sort filtered results
+        if ("location".equalsIgnoreCase(validSortField)) {
+            filteredJobs = filteredJobs.stream()
+                    .sorted((j1, j2) -> {
+                        String loc1 = j1.getLocation() != null ? j1.getLocation() : "";
+                        String loc2 = j2.getLocation() != null ? j2.getLocation() : "";
+                        int compare = loc1.compareToIgnoreCase(loc2);
+                        return direction == org.springframework.data.domain.Sort.Direction.ASC ? compare : -compare;
+                    })
+                    .collect(Collectors.toList());
+        } else { // sort by title (default)
+            filteredJobs = filteredJobs.stream()
+                    .sorted((j1, j2) -> {
+                        String title1 = j1.getTitle() != null ? j1.getTitle() : "";
+                        String title2 = j2.getTitle() != null ? j2.getTitle() : "";
+                        int compare = title1.compareToIgnoreCase(title2);
+                        return direction == org.springframework.data.domain.Sort.Direction.ASC ? compare : -compare;
+                    })
+                    .collect(Collectors.toList());
+        }
+
+        // Apply pagination manually
+        int totalItems = filteredJobs.size();
+        int totalPages = (int) Math.ceil((double) totalItems / pageSize);
+        int start = pageNo * pageSize;
+        int end = Math.min(start + pageSize, totalItems);
+        
+        List<Job> paginatedJobs = start < totalItems ? filteredJobs.subList(start, end) : new ArrayList<>();
+
+        List<String> jobIds = paginatedJobs.stream()
                 .map(Job::getJobId)
-                .toList();
+                .collect(Collectors.toList());
 
-        Map<String, Long> applicationCounts = applicationRepository.countApplicationsByJobIds(jobIds).stream()
-                .collect(Collectors.toMap(ApplicationCount::getJobId, ApplicationCount::getCount));
+        Map<String, Long> applicationCounts = jobIds.isEmpty() 
+                ? Map.of()
+                : applicationRepository.countApplicationsByJobIds(jobIds).stream()
+                        .collect(Collectors.toMap(ApplicationCount::getJobId, ApplicationCount::getCount));
 
-        List<JobInfoResponse> response = page.getContent().stream().map(job -> JobInfoResponse.builder()
-                .jobId(job.getJobId())
-                .title(job.getTitle())
-                .description(job.getDescription())
-                .requirement(job.getRequirement())
-                .location(job.getLocation())
-                .category(job.getCategory())
-                .type(job.getType())
-                .companyName(job.getCompany().getName())
-                .userId(job.getCompany().getUserId())
-                .salaryMin(job.getSalaryMin())
-                .salaryMax(job.getSalaryMax())
-                .isClosed(job.isClosed())
-                .applicationCount(applicationCounts.getOrDefault(job.getJobId(),0L))
-                .build()).toList();
+        List<JobInfoResponse> response = paginatedJobs.stream().map(job -> {
+            User company = job.getCompany();
+            return JobInfoResponse.builder()
+                    .jobId(job.getJobId())
+                    .title(job.getTitle())
+                    .description(job.getDescription())
+                    .requirement(job.getRequirement())
+                    .location(job.getLocation())
+                    .category(job.getCategory())
+                    .type(job.getType())
+                    .companyName(company != null ? company.getName() : null)
+                    .userId(company != null ? company.getUserId() : null)
+                    .salaryMin(job.getSalaryMin())
+                    .salaryMax(job.getSalaryMax())
+                    .isClosed(job.isClosed())
+                    .applicationCount(applicationCounts.getOrDefault(job.getJobId(), 0L))
+                    .build();
+        }).collect(Collectors.toList());
 
         return PageResponse.builder()
                 .pageNo(pageNo)
                 .pageSize(pageSize)
                 .items(response)
-                .totalPage(page.getTotalPages())
+                .totalPage(totalPages)
                 .build();
     }
 
